Add a desc of the difference

--- a/src/overrides/home.html
+++ b/src/overrides/home.html
@@ -86,13 +86,13 @@
           >
             Quick start
           </a>
-          <!-- <a
-            href="{{ 'insiders/' | url }}"
-            title="Material for MkDocs Insiders"
-            class="md-button"
+          <a
+            href="{{ 'differences/' | url }}"
+            title="Differences between MaterialX and Zensical"
+            class="md-button md-button--primary"
           >
-            Get Insiders
-          </a> -->
+            Differences
+          </a>
         </div>
       </div>
     </div>
