--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -17,6 +17,9 @@
           <a href="{{ page.next_page.url | url }}" title="{{ page.next_page.title | e }}" class="md-button md-button--primary">
             Quick start
           </a>
+          <a href="{{ 'differences/' | url }}" title="Differences between MaterialX and Zensical" class="md-button md-button--primary">
+            Differences
+          </a>
         </div>
       </div>
     </div>
